<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_bar_name"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        style="?attr/materialButtonStyle"
        android:text="@string/search_submit"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:gravity="center"
        android:text="@string/home_header"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/rank_header"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/title_header"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/rating_header"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular_movie_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>